# core-agent-assist

./: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  README.md  docker-compose.prod.yml  docker-compose.yml  manual_test_vapi.py  project_summary.md  pyproject.toml  test_config.py  test_tools.py
.github/workflows/: ci.yml  python-app.yml
app/: main.py
app/adapters/: google_sheets.py  telegram.py
app/api/routes/: vapi_webhooks.py
app/api/vapi/: client.py
app/api/vapi/assistants/: manager.py
app/api/vapi/calls/: manager.py
app/api/vapi/tools/: registry.py
app/api/vapi/webhooks/: handler.py  inbound_handlers.py
app/core/: config.py  config_loader.py  logger.py  security.py  utils.py  vapi_assistant_id.txt
app/handlers/: inbound.py  vapi_handler.py
app/schemas/: orders.py  vapi.py
app/scripts/: vapi_create_assistant.py
app/services/: crm_service.py  tools_registry.py  vapi_tools.py
config/: agents.yaml  knowledge_base.txt  settings.yaml  settings_test_error.yaml  vapi_config.yaml
config/assistants/: customer_support.yaml  sales.yaml
frontend/: .gitignore  Dockerfile  Dockerfile.frontend  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Login.tsx  Logs.tsx  Orders.tsx  Settings.tsx
frontend/src/services/: adminService.ts
logs/: app.json
nginx/: nginx.conf
scripts/: deploy_assistants.py  validate_setup.py
tests/: test_config.py  test_config_loader.py  test_error_handling.py  test_reload.py  test_security.py  test_tools_registry.py  test_vapi.py
tests/integration/: test_vapi_integration.py
